--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.2",
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.3.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
