--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "@types/node": "^16.18.52",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
-    "eslint": "^8.49.0",
-    "eslint-plugin-react": "^7.33.2",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -53,5 +49,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
