--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,17 +35,10 @@ jobs:
         run: echo d | xcopy /j /y /s "frontend\build" "backend\src\resources\static"
       - name: Commit Backend Code
         run: |
-          # Configure Git credentials for the push
-          git config --global credential.helper "store --file=.git-credentials"
-          
-          # Generate .git-credentials file with GitHub username and token
-          echo "https://zabory:${{ secrets.toke }}@github.com" > .git-credentials
-          
           cd backend
-          git config --global user.name 'Automation'
+          git config --global user.name 'zabory'
           git config --global user.email 'benshabowski@gmail.com'
           git remote set-url origin  https://github.com/ZGameLogic/Minecraft-Server-Utility-Backend.git 
           git add -A
           git commit -m "Updating backend with new frontend UI automatically"
-          ssh-add C:/Users/Ben/.ssh/id_ed
           git push
