--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "env-cmd": "^10.1.0",
+    "formik": "^2.4.5",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -24,7 +25,8 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
