--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.3.0",
