--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "net": "^1.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
