I am bad at this

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
 REACT_APP_BACKEND_API_URL="http://localhost:8080"
-REACT_APP_AUTH_URL="discord.com/api/oauth2/authorize?client_id=1182184476269363230&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin%2Fcallback&scope=identify+email"
+REACT_APP_AUTH_URL="https://discord.com/api/oauth2/authorize?client_id=1182184476269363230&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin%2Fcallback&scope=identify+email"
