Quick refresh token fix

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
+BUILD_PATH=C:\Users\Ben\Desktop\services\MinecraftServerUtility\build
 REACT_APP_BACKEND_API_URL="https://zgamelogic.com:2010"
 REACT_APP_AUTH_URL="https://discord.com/api/oauth2/authorize?client_id=1182184476269363230&response_type=code&redirect_uri=https%3A%2F%2Fzgamelogic.com%3A2010%2Flogin%2Fcallback&scope=identify+email"
