Updating some info for the website

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MSU",
+  "name": "Minecraft Server Utility",
   "icons": [
     {
       "src": "favicon.png",
