--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "net": "^1.0.2",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -57,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-bootstrap": "^0.26.6",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
