--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install packages
         run: npm i
+      - name: Check lint
+        run: npm run lint
   Deploy:
     runs-on: self-hosted
     needs: Build
